<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AH81</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_show">ShowActivity</string>
    <string name="tAddButton">Add products</string>
    <string name="tShowButton">Show list of products</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="tResetButton">Reset the list</string>
    <string name="hintProductName">type product name to add</string>
    <string name="hintCount">type count of the product</string>
    <string name="tAddButtonAddActivity">Add the product</string>
    <string name="tReturn">Return</string>

</resources>
