<LinearLayout
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <Button
        android:id="@+id/bAdd"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:text="@string/tAddButton"
        />

    <Button
        android:id="@+id/bShow"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:text="@string/tShowButton"
        />
    <Button
        android:id="@+id/bReset"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:text="@string/tResetButton"
        />
    <TextView
        android:id="@+id/tvOutput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="0"
        />

</LinearLayout>