<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="ilyag.ah81.AddActivity">

    <EditText
        android:id="@+id/etProductName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintProductName"
        android:gravity="center_horizontal"
        />

    <EditText
        android:id="@+id/etCount"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etProductName"
        android:inputType="numberDecimal"
        android:hint="@string/hintCount"
        android:gravity="center_horizontal"
        />

    <Button
        android:id="@+id/bAddButtonAA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tAddButtonAddActivity"
        android:layout_below="@+id/etCount"
        android:layout_alignParentLeft="true"
        />

    <Button
        android:id="@+id/bReturnAA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etCount"
        android:layout_alignParentRight="true"
        android:text="@string/tReturn"
        />
</RelativeLayout>
